Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-48766

Wrong touch event coordinates in QtWebEngine when using pixelDeviceRatio

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0 RC
    • 5.5.0
    • WebEngine
    • None
    • WebOS-Ports project LuneOS, on LG Nexus 4 ("mako") smartphone
      Stack is a classic Qt/Wayland/Linux stack with the use of a QPA for this specific device.
    • 09a341f4a62a0fe244dc188a75d77d0067ad1fe7

    Description

      When using devicePixelRatio, only a part of the webpage was responding to touch events on device. Therefore I suspected an issue in the conversion of touch event coordinates, and found out that touch events don't seem to be mapped to web coordinates using dpiScale.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            alexandru.croitor Alexandru Croitor
            tofe Christophe Chapuis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes