Fix touch events coordinates when using custom devicePixelRatio

Task-number: QTBUG-48766
Change-Id: Idcae6dc84829fe96db62c6cb30ab193873d36709
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>
Reviewed-by: Joerg Bornemann <joerg.bornemann@theqtcompany.com>